--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   table_calendar: ^3.1.2
   intl: ^0.19.0
   cached_network_image: ^3.3.1
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
